--- a/app/views/players/show.html.erb
+++ b/app/views/players/show.html.erb
@@ -16,4 +16,4 @@
 </p>
 
 <%= link_to 'Edit', edit_player_path(@player) %> |
-<%= link_to 'Back', players_path %>
+<%= link_to 'All Players', players_path %>
