--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -16,8 +16,8 @@
     <% @teams.each do |team| %>
       <tr>
         <td><%= team.name %></td>
-        <td><%= team.captain %></td>
-        <td><%= team.captain2 %></td>
+        <td><%= team.captain_1.full_name%></td>
+        <td><%= team.captain_2.full_name%></td>
         <td><%= link_to 'Show', team %></td>
         <td><%= link_to 'Edit', edit_team_path(team) %></td>
         <td><%= link_to 'Destroy', team, method: :delete, data: { confirm: 'Are you sure?' } %></td>
