--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,4 +11,10 @@
   <body>
     <%= yield %>
   </body>
+
+<%= link_to 'All Games', games_path %>
+<%= link_to 'All Players', players_path %>
+<%= link_to 'All Matches', mattches_path %>
+<%= link_to 'All Teams', teams_path %>
+
 </html>
