--- a/app/views/mattches/index.html.erb
+++ b/app/views/mattches/index.html.erb
@@ -6,6 +6,8 @@
   <thead>
     <tr>
       <th>Mattch date</th>
+      <th>Team</th>
+      <th>Team</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -14,6 +16,9 @@
     <% @mattches.each do |mattch| %>
       <tr>
         <td><%= mattch.mattch_date %></td>
+        <% mattch.teams.each do |team| %>
+          <td><%= team.name %></td>
+        <% end %>
         <td><%= link_to 'Show', mattch %></td>
         <td><%= link_to 'Edit', edit_mattch_path(mattch) %></td>
         <td><%= link_to 'Destroy', mattch, method: :delete, data: { confirm: 'Are you sure?' } %></td>
