--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1,4 +1,24 @@
 body {
-	background: #3E4649;
-	color: #f7f7f7;
+	background: #0f6849;
+	color: #340f68;
+}
+
+.btn-primary {
+	color: #fff;
+	background-color: transparent;
+	border-color: white;
+	margin-bottom: 5px;
+}
+.btn-primary:hover {
+	color: #27A967;
+	background-color: white;
+	border-color: white;
+}
+
+h1 {
+	color: #111111;
+}
+
+a:link {
+	color: #aa147d;
 }
