--- a/app/views/mattches/new.html.erb
+++ b/app/views/mattches/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Mattch</h1>
+<h1>New Match</h1>
 
 <%= render 'form', mattch: @mattch %>
 
-<%= link_to 'Back', mattches_path %>
+<%= link_to 'All Matches', mattches_path %>
