--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -18,6 +18,7 @@
         <td><%= game.mattch_id %></td>
         <td><%= game.game_number %></td>
         <td><%= game.forfeit %></td>
+        <td><%= game.winning_team_id %></td>
         <td><%= link_to 'Show', game %></td>
         <td><%= link_to 'Edit', edit_game_path(game) %></td>
         <td><%= link_to 'Destroy', game, method: :delete, data: { confirm: 'Are you sure?' } %></td>
