--- a/app/views/mattches/_form.html.erb
+++ b/app/views/mattches/_form.html.erb
@@ -26,7 +26,7 @@
     <div class="row">
       <div class="col-sm-4">
         <%= m.label :team_id %>
-        <%= m.collection_select(:team_id, Team.all.order("name"), :id, :name) %>
+        <%= m.collection_select(:team_id, Team.all.order("name"), :id, :name, :onchange => 'your_onchange_handler(this)') %>
         <%= m.label :home %>
         <%= m.check_box(:home) %>   
           <% @team_b_id = :team_id  %>
@@ -42,5 +42,7 @@
   </div>
 
   </br>
+
+  <%= javascript_include_tag "customjsFile", "data-turbolinks-track" => true  %>
 
 <% end %>
