--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -25,8 +25,9 @@ a:link {
 
 /*
 
-.table tbody tr td, .table tbody tr th {
-    border: none;
+.noo_border {
+	background-color: white;
+	border-color: white;	
 }
 
 */
