--- a/app/views/mattches/_form.html.erb
+++ b/app/views/mattches/_form.html.erb
@@ -2,7 +2,6 @@
   <% if mattch.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(mattch.errors.count, "error") %> prohibited this mattch from being saved:</h2>
-
       <ul>
       <% mattch.errors.full_messages.each do |message| %>
         <li><%= message %></li>
@@ -11,38 +10,102 @@
     </div>
   <% end %>
 
+  <section class="mattch">
   <div class="row">
     <div class="col-sm-4">
-    </div>
+    </div>  
     <div class="col-sm-4">
-      <div class="field">
+      <div class="field" onclick="this.style.backgroundColor='#990000'">
         <%= f.label :match_date %>
         <%= f.date_select :mattch_date %>
       </div>
-    </div> 
+    </div>
   </div>
 
-  <%= f.fields_for :matchteams do |m| %>
-    <div class="row">
-      <div class="col-sm-4">
+  <% @counter_a = 0 %>
+
+  <div class="row">
+    <%= f.fields_for :matchteams do |m| %>
+      <div class="col-sm-6">
+
         <%= m.label :team_id %>
-        <%= m.collection_select(:team_id, Team.all.order("name"), :id, :name, :onchange => 'your_onchange_handler(this)') %>
-        <%= m.label :home %>
-        <%= m.check_box(:home) %>   
+        <% if @counter_a == 0 %>  
+          <%= m.collection_select(:team_id, Team.all.order("name"), :id, :name, {}, 
+                                  html_options={:onchange=>"left_team_change(this)"}) %>
+          <% @team_a_id = :team_id  %>
+        <% else %>
+          <%= m.collection_select(:team_id, Team.all.order("name"), :id, :name, {}, 
+                                  html_options={:onchange=>"right_team_change(this)"}) %>
           <% @team_b_id = :team_id  %>
-      </div>    
-    </div>
-  <% end %>
+        <% end %>
+
+        <%= m.label :home %>
+        <%= m.check_box(:home) %> 
+
+        <% @counter_a += 1 %>
+
+      </div>
+    <% end %> 
+  </div>
+  </section">
     
   </br>
 
+  <section class="games"> 
+  <table> 
+  <tr>
+  
+  <% @counter_a = 0 %>
+  <% @counter_b = 0 %>
+
+  <%= f.fields_for :games do |g| %>
+      <td class="no_border">
+    <%= g.label :game_number %>  <%= @counter_a += 1 %>
+      </td>
+      <td>        
+    <%= g.label :forfeit %>
+    <%= g.check_box(:forfeit) %>    
+      </td>
+    <%= g.hidden_field :game_number, value: @counter_a %>    
+        <td> 
+    <%= g.radio_button :winning_team_id, @team_a_id %>
+    <%= g.radio_button :winning_team_id, 0 %>
+    <%= g.radio_button :winning_team_id, @team_b_id%>
+        </td>     
+        <td>        
+        </td>
+        <td>        
+        </td>
+        </tr>
+      <tr>
+
+    <% @counter_b = 0 %>
+    <%= g.fields_for :gameplayers do |p| %>
+        <td class="noo_border">
+      <% if @counter_b < 2 %>   
+        <%= p.collection_select(:player_id, Player.all.order("l_name"), :id, :full_name) %>
+      <% else %>
+        <%= p.collection_select(:player_id, Player.all.order("l_name"), :id, :full_name) %>
+      <% end %>
+      8<%= p.check_box(:eight) %>
+
+      <% @counter_b += 1 %>
+      <% if @counter_b == 2 %>
+        <td> 0  to  1</td>
+      <% end %>
+    <% end %>
+      </tr> 
+
+    <% end %>
+
+  </table>
+  
   <div class="actions">
-    <input type="submit" name="commit" value="Create Match" data-disable-with="Create Mattch" /> 
-    <input type="submit" name="addGames" value="Add Games" data-disable-with="Create Mattch" /> 
-  </div>
+    <%= f.submit %>
+  </div>  
 
   </br>
 
-  <%= javascript_include_tag "customjsFile", "data-turbolinks-track" => true  %>
+  </section>
 
 <% end %>
