--- a/app/views/mattches/edit.html.erb
+++ b/app/views/mattches/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form', mattch: @mattch %>
 
-<%= link_to 'Show', @mattch %> |
-<%= link_to 'Back', mattches_path %>
+<%= link_to 'Show Match', @mattch, :class=>"btn btn-primary" %> |
+<%= link_to 'All Matches', mattches_path, :class=>"btn btn-primary" %>
