--- a/app/views/games/edit.html.erb
+++ b/app/views/games/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form', game: @game %>
 
-<%= link_to 'Show', @game %> |
-<%= link_to 'Back', games_path %>
+<%= link_to 'Show', @game, :class=>"btn btn-primary"  %> |
+<%= link_to 'Back', games_path, :class=>"btn btn-primary"  %>
