--- a/app/views/games/new.html.erb
+++ b/app/views/games/new.html.erb
@@ -2,4 +2,4 @@
 
 <%= render 'form', game: @game %>
 
-<%= link_to 'All Games', games_path %>
+<%= link_to 'All Games', games_path, :class=>"btn btn-primary"  %>
