--- a/app/views/mattches/index.html.erb
+++ b/app/views/mattches/index.html.erb
@@ -1,11 +1,11 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Mattches</h1>
+<h1>All Matches</h1>
 
 <table>
   <thead>
     <tr>
-      <th>Mattch date</th>
+      <th>Match date</th>
       <th>Team</th>
       <th>Team</th>
       <th colspan="3"></th>
@@ -29,4 +29,4 @@
 
 <br>
 
-<%= link_to 'New Mattch', new_mattch_path %>
+<%= link_to 'New Match', new_mattch_path, :class=>"btn btn-primary" %> |
