--- a/app/views/mattches/new.html.erb
+++ b/app/views/mattches/new.html.erb
@@ -2,4 +2,4 @@
 
 <%= render 'form', mattch: @mattch %>
 
-<%= link_to 'All Matches', mattches_path %>
+<%= link_to 'All Matches', mattches_path, :class=>"btn btn-primary"  %>
