--- a/app/views/players/edit.html.erb
+++ b/app/views/players/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form', player: @player %>
 
-<%= link_to 'Show', @player %> |
-<%= link_to 'Back', players_path %>
+<%= link_to 'Show Player', @player, :class=>"btn btn-primary"  %> |
+<%= link_to 'All Players', players_path, :class=>"btn btn-primary"  %>
