--- a/app/views/teams/edit.html.erb
+++ b/app/views/teams/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form', team: @team %>
 
-<%= link_to 'Show', @team %> |
-<%= link_to 'All Teams', teams_path %>
+<%= link_to 'Show', @team, :class=>"btn btn-primary"  %> |
+<%= link_to 'All Teams', teams_path, :class=>"btn btn-primary"  %>
