--- a/app/views/teams/new.html.erb
+++ b/app/views/teams/new.html.erb
@@ -2,4 +2,4 @@
 
 <%= render 'form', team: @team %>
 
-<%= link_to 'Back', teams_path %>
+<%= link_to 'All Teams', teams_path, :class=>"btn btn-primary"  %>
