--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -17,10 +17,10 @@
   <tr>
     <th>Name</th>
     <th>Team</th>
-    <th>games</th>
-    <th>wins</th>
-    <th>%</th>
-    <th>8's</th>
+    <th align="right">games</th>
+    <th align="right">wins</th>
+    <th align="right">%</th>
+    <th align="right">8's</th>
     
     <th colspan="3"></th>
   </tr>
@@ -34,7 +34,7 @@
       <% @games_won = player.games.where(:winning_team_id => player.team_id).count %>
       <td align="right"><%= @games_won %></td>
       <% if @games_played != 0 %>
-        <td align="right"><%= ((@games_won.to_f/@games_played)*100).round(2) %>%</td>
+        <td align="right"><%= ((@games_won.to_f/@games_played)*100).round(0) %>%</td>
       <% else %>
         <td align="right"> 0 </td>
       <% end %>  
@@ -55,7 +55,7 @@
 <% @our_games_ctr = 0 %>
 <% @their_games_ctr = 0 %>
 
-<table class="table">
+<table class="table table-bordered">
 <tbody>
   <% @team.mattches.order(:mattch_date).each do |match| %>
     <% @matches_ctr += 1 %>
@@ -87,8 +87,6 @@
 </tbody>
 </table>
 </div>
-
-
 
 
 <%= link_to 'Edit', edit_team_path(@team), :class=>"btn btn-primary"  %> |
