--- a/app/views/players/show.html.erb
+++ b/app/views/players/show.html.erb
@@ -60,8 +60,10 @@ Matches played:<%= @player.games.where.not(:winning_team_id => nil ).count("DIST
     <% end %>
 
     <td><%= link_to 'Show', game %></td>
-    <td><%= link_to 'Edit', edit_game_path(game) %></td>
-    <td><%= link_to 'Destroy', game, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+    <% if current_user.admin? %>
+      <td><%= link_to 'Edit', edit_game_path(game) %></td>
+      <td><%= link_to 'Destroy', game, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+    <% end %>  
     </tr>
   <% end %>
   <tr>
